--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.mjs",
   "scripts": {
-    "start": "nodemon index.mjs",
+    "start": "nodemon index.js",
     "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
