--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
     "build": "npm i",
